erDiagram
    GALLERY ||--o{ EXHIBIT : displays
    EXHIBIT ||--o{ EXHIBIT_ARTIST : has
    ARTIST ||--o{ EXHIBIT_ARTIST : contributes
    EXHIBIT ||--o{ LOAN : loaned_as

    GALLERY {
        integer id PK
        string name UK
        integer floor
    }
    EXHIBIT {
        integer id PK
        string inventory_code UK
        string title
        decimal insured_value
        integer gallery_id FK
    }
    ARTIST {
        integer id PK
        string name
        integer birth_year
    }
    EXHIBIT_ARTIST {
        integer exhibit_id PK, FK
        integer artist_id PK, FK
        string role PK
    }
    LOAN {
        integer id PK
        integer exhibit_id FK
        string borrower
        date starts_on
        date ends_on
    }
